<?xml version="1.0"?>
<package format="3">
  <name>interface_node_demo</name>
  <version>0.1.0</version>
  <description>Minimal demo of communication between a ROS2 Node and a Qt QObject</description>
  <maintainer email="aurelien.genin@polytechnique.edu">Aurelien Genin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
