<?xml version="1.0"?>
<package format="3">
  <name>interface_node_demo</name>
  <version>0.1.0</version>
  <description>Minimal demo of communication between a ROS2 Node and a Qt QObject using topics and services</description>
  <maintainer email="aurelien.genin@cube-monde.net">AstroAure</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>interface_demo_messages</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>interface_demo_messages</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
