<?xml version="1.0"?>
<package format="3">
  <name>qt_object</name>
  <version>1.0.0</version>
  <description>Minimal ROS2 implementation of a Qt QObject</description>
  <maintainer email="aurelien.genin@cube-monde.net">AstroAure</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>Qt5</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>Qt5</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
